--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "compass": "^0.1.1",
+    "compass-mixins": "^0.12.12",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
